@@ -14,6 +14,7 @@
 package com.slascone;
 
 import java.util.Map;
+import java.io.Serial;
 import java.util.List;
 
 
@@ -23,7 +24,8 @@ import java.util.List;
 @SuppressWarnings("serial")
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.14.0")
 public class ApiException extends Exception {
-    private static final long serialVersionUID = 1L;
+  @Serial
+  private static final long serialVersionUID = 1L;
 
     private int code = 0;
     private Map<String, List<String>> responseHeaders = null;
@@ -161,7 +163,7 @@ public class ApiException extends Exception {
      * @return The exception message
      */
     public String getMessage() {
-        return String.format("Message: %s%nHTTP response code: %s%nHTTP response body: %s%nHTTP response headers: %s",
-                super.getMessage(), this.getCode(), this.getResponseBody(), this.getResponseHeaders());
+        return "Message: %s%nHTTP response code: %s%nHTTP response body: %s%nHTTP response headers: %s".formatted(
+            super.getMessage(), this.getCode(), this.getResponseBody(), this.getResponseHeaders());
     }
 }
