@@ -227,7 +227,7 @@ public class LicenseImportLimitationDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!LicenseImportLimitationDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in LicenseImportLimitationDto is not found in the empty JSON string", LicenseImportLimitationDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in LicenseImportLimitationDto is not found in the empty JSON string".formatted(LicenseImportLimitationDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -235,12 +235,12 @@ public class LicenseImportLimitationDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!LicenseImportLimitationDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `LicenseImportLimitationDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `LicenseImportLimitationDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("limitation") != null && !jsonObj.get("limitation").isJsonNull()) && !jsonObj.get("limitation").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `limitation` to be a primitive type in the JSON string but got `%s`", jsonObj.get("limitation").toString()));
+        throw new IllegalArgumentException("Expected the field `limitation` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("limitation").toString()));
       }
       // validate the optional field `consumption_reset_mode`
       if (jsonObj.get("consumption_reset_mode") != null && !jsonObj.get("consumption_reset_mode").isJsonNull()) {
