@@ -211,7 +211,7 @@ public class LicenseLazyLoadDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!LicenseLazyLoadDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in LicenseLazyLoadDto is not found in the empty JSON string", LicenseLazyLoadDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in LicenseLazyLoadDto is not found in the empty JSON string".formatted(LicenseLazyLoadDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -219,7 +219,7 @@ public class LicenseLazyLoadDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!LicenseLazyLoadDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `LicenseLazyLoadDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `LicenseLazyLoadDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
@@ -228,7 +228,7 @@ public class LicenseLazyLoadDto {
         if (jsonArraylicenses != null) {
           // ensure the json data is an array
           if (!jsonObj.get("licenses").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `licenses` to be an array in the JSON string but got `%s`", jsonObj.get("licenses").toString()));
+            throw new IllegalArgumentException("Expected the field `licenses` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("licenses").toString()));
           }
 
           // validate the optional field `licenses` (array)
