@@ -474,7 +474,7 @@ public class ProductDetailsDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!ProductDetailsDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in ProductDetailsDto is not found in the empty JSON string", ProductDetailsDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in ProductDetailsDto is not found in the empty JSON string".formatted(ProductDetailsDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -482,7 +482,7 @@ public class ProductDetailsDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!ProductDetailsDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `ProductDetailsDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `ProductDetailsDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
@@ -491,7 +491,7 @@ public class ProductDetailsDto {
         if (jsonArrayfeatures != null) {
           // ensure the json data is an array
           if (!jsonObj.get("features").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `features` to be an array in the JSON string but got `%s`", jsonObj.get("features").toString()));
+            throw new IllegalArgumentException("Expected the field `features` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("features").toString()));
           }
 
           // validate the optional field `features` (array)
@@ -505,7 +505,7 @@ public class ProductDetailsDto {
         if (jsonArraylimitations != null) {
           // ensure the json data is an array
           if (!jsonObj.get("limitations").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `limitations` to be an array in the JSON string but got `%s`", jsonObj.get("limitations").toString()));
+            throw new IllegalArgumentException("Expected the field `limitations` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("limitations").toString()));
           }
 
           // validate the optional field `limitations` (array)
@@ -519,7 +519,7 @@ public class ProductDetailsDto {
         if (jsonArrayvariables != null) {
           // ensure the json data is an array
           if (!jsonObj.get("variables").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `variables` to be an array in the JSON string but got `%s`", jsonObj.get("variables").toString()));
+            throw new IllegalArgumentException("Expected the field `variables` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("variables").toString()));
           }
 
           // validate the optional field `variables` (array)
@@ -533,7 +533,7 @@ public class ProductDetailsDto {
         if (jsonArrayconstrainedVariables != null) {
           // ensure the json data is an array
           if (!jsonObj.get("constrained_variables").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `constrained_variables` to be an array in the JSON string but got `%s`", jsonObj.get("constrained_variables").toString()));
+            throw new IllegalArgumentException("Expected the field `constrained_variables` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("constrained_variables").toString()));
           }
 
           // validate the optional field `constrained_variables` (array)
@@ -547,7 +547,7 @@ public class ProductDetailsDto {
         if (jsonArrayanalyticalFields != null) {
           // ensure the json data is an array
           if (!jsonObj.get("analytical_fields").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `analytical_fields` to be an array in the JSON string but got `%s`", jsonObj.get("analytical_fields").toString()));
+            throw new IllegalArgumentException("Expected the field `analytical_fields` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("analytical_fields").toString()));
           }
 
           // validate the optional field `analytical_fields` (array)
@@ -561,7 +561,7 @@ public class ProductDetailsDto {
         if (jsonArraysoftwareReleaseLimitations != null) {
           // ensure the json data is an array
           if (!jsonObj.get("software_release_limitations").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `software_release_limitations` to be an array in the JSON string but got `%s`", jsonObj.get("software_release_limitations").toString()));
+            throw new IllegalArgumentException("Expected the field `software_release_limitations` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("software_release_limitations").toString()));
           }
 
           // validate the optional field `software_release_limitations` (array)
@@ -575,7 +575,7 @@ public class ProductDetailsDto {
         if (jsonArrayusageFeatures != null) {
           // ensure the json data is an array
           if (!jsonObj.get("usage_features").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `usage_features` to be an array in the JSON string but got `%s`", jsonObj.get("usage_features").toString()));
+            throw new IllegalArgumentException("Expected the field `usage_features` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("usage_features").toString()));
           }
 
           // validate the optional field `usage_features` (array)
@@ -589,7 +589,7 @@ public class ProductDetailsDto {
         if (jsonArrayusageModules != null) {
           // ensure the json data is an array
           if (!jsonObj.get("usage_modules").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `usage_modules` to be an array in the JSON string but got `%s`", jsonObj.get("usage_modules").toString()));
+            throw new IllegalArgumentException("Expected the field `usage_modules` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("usage_modules").toString()));
           }
 
           // validate the optional field `usage_modules` (array)
@@ -603,7 +603,7 @@ public class ProductDetailsDto {
         if (jsonArrayemailTemplates != null) {
           // ensure the json data is an array
           if (!jsonObj.get("email_templates").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `email_templates` to be an array in the JSON string but got `%s`", jsonObj.get("email_templates").toString()));
+            throw new IllegalArgumentException("Expected the field `email_templates` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("email_templates").toString()));
           }
 
           // validate the optional field `email_templates` (array)
@@ -617,7 +617,7 @@ public class ProductDetailsDto {
         if (jsonArraysoftwareShipmentProperties != null) {
           // ensure the json data is an array
           if (!jsonObj.get("software_shipment_properties").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `software_shipment_properties` to be an array in the JSON string but got `%s`", jsonObj.get("software_shipment_properties").toString()));
+            throw new IllegalArgumentException("Expected the field `software_shipment_properties` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("software_shipment_properties").toString()));
           }
 
           // validate the optional field `software_shipment_properties` (array)
