@@ -228,7 +228,7 @@ public class SubscriptionPlanDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!SubscriptionPlanDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in SubscriptionPlanDto is not found in the empty JSON string", SubscriptionPlanDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in SubscriptionPlanDto is not found in the empty JSON string".formatted(SubscriptionPlanDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -236,7 +236,7 @@ public class SubscriptionPlanDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!SubscriptionPlanDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `SubscriptionPlanDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `SubscriptionPlanDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
